proj1/tests/other-tests/MINZ_tests/error/fn_decorator.py
def dec(f):
    return f

@dec
def with_dec(x):
    pass